Fix FA icon vertical shift/scrollbars

--- a/_sass/malyuta-theme/_layout.scss
+++ b/_sass/malyuta-theme/_layout.scss
@@ -256,8 +256,8 @@ a.site-title:hover {
         margin: 0;
         padding: 0;
         vertical-align: middle;
-        font-size: 30px;
-        line-height: 30px !important;
+        font-size: 28px;
+        line-height: 28px !important;
     }
 }
 
@@ -268,7 +268,7 @@ a.site-title:hover {
 .fa-github-square:before,
 .fa-researchgate:before {
     display:block;
-    margin-top:-1px;
+    margin-top:-2px;
 }
 
 .bibentry-link-entry a.github:hover {
